src/main/resources/static/css/style.css
.box {
    background-color: #333;
    padding: 0.5em;
    margin: 0.5em;
    color: white;
    min-width: 10vh;
    max-width: 40vh;
}

.home-center {
	display: block;
    margin-left: auto;
    margin-right: auto;
    width: 40%;
}

.red {
	color:red
}

.box a {
	text-decoration: none;
	color: #333;
	background-color: white;
	padding: 2px;
}

.box a:hover {
	background-color: #ddd;
}

input[type=text] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-sizing: border-box;
}

input[type=text]:focus {
  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
  border: 1px solid rgba(81, 203, 238, 1);
}

input[type=submit] {
    width: 100%;
    color: #333;
    padding: 14px 20px;
    margin: 8px 0;
    border-radius: 5px;
    cursor: pointer;
    background-color: white;
}

input[type=submit]:hover {
	background-image: -webkit-linear-gradient(left bottom,rgba(53, 169, 232,0) 0,rgba(53, 169, 150,0.6) 100%);
}

ul {
  list-style: none;
}

